<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VARA Platform</string>
    <string name="moto">Your Vehicle, Your Money</string>
    <string name="logo">logo</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Log-In</string>
    <string name="label_sign_up">Sign-Up</string>
    <string name="label_home">Home</string>
    <string name="label_continue">Continue</string>
    <string name="label_back">Back</string>
    <string name="label_admin">Admin</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>


    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="city">City</string>

    <string name="user_information">User Profile Information</string>

    <string name="nativeas_ad_unit_id" translatable="false">ca-app-pub-9220432525424100/8387801575</string>
    <string name="label_SignOff" translatable="false">Sign Off</string>

    <string name="farewell_msg_email">Questions? Concerns? Contact us at </string>
    <string name="farewell_msg_body">Thank you for watching our sponsors and the important info they shared with you. please patronize these sponsors since they are paying to keep fare costs down while giving a better income to your driver, you are entitled to special discounts for participating.If you would like more information on these special discounts, please tap the flowing \'YES\' button and we\'ll follow up with an email that includes your personal discounts.</string>
    <string name="farewell_email">varaplatformtest@gmail.com</string>

    <string name="welcome_1">Welcome! • this platform is brought to you on behalf of your Lyft driver</string>
    <string name="welcome_2">• in order to keep fares down but at the same time assist your drivers with a better income for sharing their car, they have authorized the presentation of this programing and promotional material</string>
    <string name="welcome_3">• the businesses who make this possible thank you for your participation and we ask that you patronize them</string>
    <string name="welcome_4">• additional promotinal discounts, for more savings, will be presented to you at the end of your trip</string>
    <string name="welcome_5">• if you have any further questions or suggestions please email us at varaplatformtest@gmail.com</string>
    <string name="welcome_6">• thank you for your participation, the VARA team</string>


</resources>
