<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logoPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:drawingCacheQuality="auto">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="600dp"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="419dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="462dp"
        android:alpha="100"
        android:background="#00000000"
        android:contentDescription="@string/logo"
        android:cropToPadding="true"
        android:foreground="@drawable/vara_logo"
        android:padding="250dp"
        android:scaleType="centerInside"
        android:scaleX="1"
        android:scaleY="1"
        tools:targetApi="m" />

    <Button
        android:id="@+id/signOffButton"
        style="@style/VaraTheme"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="128dp"
        android:text="@string/label_SignOff"
        android:textAlignment="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/adminButton"
        style="@style/VaraTheme"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="128dp"
        android:text="@string/label_admin"
        android:visibility="gone"/>

</RelativeLayout>
