<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logoPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:drawingCacheQuality="auto">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="185dp"
        android:layout_height="138dp"
        android:alpha="100"
        android:background="#00000000"
        android:contentDescription="@string/logo"
        android:cropToPadding="true"
        android:foreground="@drawable/logo"
        android:padding="250dp"
        android:scaleType="centerInside"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="m"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="321dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#F2F2F2"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/txtMoto"
        android:layout_width="607dp"
        android:layout_height="68dp"
        android:layout_marginBottom="108dp"
        android:alpha="100"
        android:text="@string/moto"
        android:textAlignment="center"
        android:textColor="#FF23F4"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/moto" />

</androidx.constraintlayout.widget.ConstraintLayout>