<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    android:padding="40dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBlack"
        android:src="@drawable/back_button"
        android:textAlignment="gravity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:text="@string/user_information"
            android:textAlignment="gravity"
            android:textColor="@color/colorPink"
            android:textSize="36sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="0dp"
            android:background="@color/colorBlack"
            android:textAlignment="gravity"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="0dp"
            android:background="#000000"
            android:textAlignment="gravity"
            android:visibility="gone"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#F2F2F2"
        tools:ignore="InefficientWeight" />

    <LinearLayout
        android:id="@+id/email-layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/em"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/label_email"
            android:textColor="@color/colorPink"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            tools:text="mail@email.com"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fn-layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fn"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fname"
            android:textColor="@color/colorPink"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/firstName_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:visibility="visible"
            tools:text="first name" />

        <EditText
            android:id="@+id/firstName_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:paddingStart="6dp"
            android:textColor="#F2F2F2"
            android:textSize="28sp"
            android:visibility="gone"
            tools:text="first name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln-layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ln"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/lname"
            android:textColor="@color/colorPink"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/lastName_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:visibility="visible"
            tools:text="last name" />

        <EditText
            android:id="@+id/lastName_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:paddingStart="6dp"
            android:textColor="#F2F2F2"
            android:textSize="28sp"
            android:visibility="gone"
            tools:text="last name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone-layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/p"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/phone"
            android:textColor="@color/colorPink"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:visibility="visible"
            tools:text="###-###-####" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="phone"
            android:paddingStart="6dp"
            android:textColor="#F2F2F2"
            android:textSize="28sp"
            android:visibility="gone"
            tools:text="###-###-####" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/city-layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/c"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/city"
            android:textColor="@color/colorPink"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:visibility="visible"
            tools:text="city" />

        <EditText
            android:id="@+id/city_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:paddingStart="6dp"
            android:textColor="#F2F2F2"
            android:textSize="28sp"
            android:visibility="gone"
            tools:text="city" />
    </LinearLayout>

</LinearLayout>